@@ -1,11 +1,13 @@
 // Copyright 2002-2012, University of Colorado
 package edu.colorado.phet.fractions.buildafraction.view.numbers;
 
+import fj.F;
 import fj.data.List;
+import fj.data.Option;
 import lombok.Data;
 
-import static edu.colorado.phet.fractions.buildafraction.view.numbers.NumberCardNode._initialPositionEquals;
-import static edu.colorado.phet.fractions.buildafraction.view.numbers.NumberCardNode._isInStackLocation;
+import edu.colorado.phet.fractions.common.util.FJUtils;
+import edu.colorado.phet.fractions.common.util.immutable.Vector2D;
 
 /**
  * Keep track of a stack or pile of cards for purposes of making sure only the top one is grabbable, and if a middle card is taken out, then the top card will fall down one slot.
@@ -14,13 +16,14 @@ import static edu.colorado.phet.fractions.buildafraction.view.numbers.NumberCard
  */
 public @Data class Stack {
     public final List<NumberCardNode> cards;
+    private final Integer stackIndex;
+    private final StackContext context;
 
-    public Stack( List<NumberCardNode> cards ) {
+    public Stack( List<NumberCardNode> cards, final Integer stackIndex, final StackContext context ) {
         this.cards = cards;
+        this.stackIndex = stackIndex;
+        this.context = context;
 
-        for ( NumberCardNode card : cards ) {
-            card.setStack( this );//Registers for callbacks for stack change events
-        }
         updatePickable();
     }
 
@@ -29,19 +32,20 @@ public @Data class Stack {
         for ( NumberCardNode card : cards ) {
             card.setAllPickable( false );
         }
-        if ( getCardsCurrentlyInStack().length() > 0 ) {
-            getCardsCurrentlyInStack().last().setAllPickable( true );
+        final Option<NumberCardNode> front = getFrontCardInStack();
+        front.foreach( NumberCardNode._setAllPickable );
+        if ( front.isSome() ) {
+            front.some().moveToFront();
         }
     }
 
-    private List<NumberCardNode> getCardsCurrentlyInStack() {return cards.filter( _isInStackLocation );}
-
-    public void cardMoved( final NumberCardNode numberCardNode ) {
-        updatePickable();
-    }
-
-    public boolean contains( final double xOffset, final double yOffset ) {
-        return cards.exists( _initialPositionEquals( xOffset, yOffset ) );
+    private Option<NumberCardNode> getFrontCardInStack() {
+        List<NumberCardNode> sorted = cards.sort( FJUtils.ord( new F<NumberCardNode, Double>() {
+            @Override public Double f( final NumberCardNode numberCardNode ) {
+                return numberCardNode.getPositionInStack().isSome() ? numberCardNode.getPositionInStack().some() : -1.0;
+            }
+        } ) );
+        return sorted.isEmpty() ? Option.<NumberCardNode>none() : Option.some( sorted.last() );
     }
 
     //Fix Z ordering so that stacks will look like they did on startup
@@ -49,5 +53,34 @@ public @Data class Stack {
         for ( NumberCardNode card : cards ) {
             card.moveToFront();
         }
+        updatePickable();
+    }
+
+    private final F<Option<Integer>, List<Integer>> optionToList = FJUtils.optionToList();
+
+    public Vector2D getLocation( final int index, NumberCardNode card ) {
+        return context.getLocation( stackIndex, index, card );
+    }
+
+    //Find the location for the topmost (in z-ordering) card and move the card there.  Also mark the site as used so no other cards will go there.
+    public void moveToTopOfStack( final NumberCardNode cardNode ) {
+        List<Integer> sites = List.range( 0, cards.length() );
+        for ( Integer site : sites ) {
+            if ( !hasCardAtSite( site ) ) {
+                cardNode.setPositionInStack( Option.some( site ) );
+                cardNode.animateTo( getLocation( site, cardNode ) );
+                cardNode.moveToFront();
+                break;
+            }
+        }
+    }
+
+    private boolean hasCardAtSite( final Integer site ) {
+        for ( NumberCardNode card : cards ) {
+            if ( card.isAtStackIndex( site ) ) {
+                return true;
+            }
+        }
+        return false;
     }
 }
